--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -4,24 +4,31 @@
         flex-wrap: wrap;
         gap: 30px 60px;
     }
+
     &__field {
         width: 100%;
+
         &--w50 {
             width: calc(50% - 30px);
         }
+
         &--mb30 {
             margin-bottom: 30px;
         }
     }
+
     &__group {
         width: 100%;
+
         &--w50 {
             width: calc(50% - 30px);
         }
     }
+
     &__section {
         margin-bottom: 50px;
     }
+
     &__title {
         display: block;
         margin: 0 0 10px;
@@ -30,28 +37,32 @@
         font-size: 18px;
         line-height: 25px;
     }
+
     &__btns {
         display: flex;
         align-items: center;
         margin-top: 40px;
     }
+
     &__btn {
         max-width: 400px;
         width: 100%;
     }
+
     &__btn-close {
-        margin-left: 200px;
+        margin: 0 auto;
+        padding: 4px 0;
         border: none;
-        padding: 10px 15px;
-        background-color: transparent;
-        text-decoration: underline;
-        font-weight: 600;
-        line-height: 1.3;
+        background: transparent;
         color: @black;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        text-decoration: underline;
         transition: color 0.2s;
-        &:hover,
-        &:active {
-            columns: @red;
+
+        &:hover {
+            color: @red;
         }
     }
 }
