--- a/src/styles/blocks/pp.less
+++ b/src/styles/blocks/pp.less
@@ -1,16 +1,15 @@
 .pp {
     box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding: 90px 95px 50px;
-    background-color: rgba(28, 27, 27, 0.4);
-    backdrop-filter: blur(50px);
+    width: 100%;
+    height: 100vh;
+    min-width: 1200px;
+    padding: 90px 40px 50px;
+    background-color: fade(@black, 40%);
+    backdrop-filter: blur(20px);
     overflow-y: auto;
     z-index: 110;
-    display: none;
+    display: flex;
+
     &__wrapper {
         box-sizing: border-box;
         position: relative;
@@ -20,11 +19,12 @@
         max-width: 1210px;
         margin: auto;
         background-color: @gray;
-        background-image: url(../assets/images/noise.png);
         background-position: 0 0;
         background-size: auto;
         background-repeat: repeat;
+        background-image: url(../assets/images/noise.png);
     }
+
     &__container {
         box-sizing: border-box;
         width: 100%;
@@ -32,6 +32,7 @@
         margin: 0 auto;
         padding: 0 40px 40px;
     }
+
     &__sticky-close {
         position: sticky;
         top: 0;
@@ -39,11 +40,13 @@
         width: 0;
         height: 0;
     }
-    &__x-btn {
+
+    .x-btn {
         position: absolute;
         top: -30px;
         right: -30px;
     }
+
     &__title {
         box-sizing: border-box;
         display: flex;
