--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -3,17 +3,32 @@
 @import "global/fonts.less";
 @import "global/common.less";
 // @import "vendor/swiper.less";
+@import "blocks/about.less";
+@import "blocks/article-card.less";
+@import "blocks/article.less";
 @import "blocks/btn.less";
+@import "blocks/check.less";
+@import "blocks/content.less";
+@import "blocks/event-card.less";
+@import "blocks/event.less";
+@import "blocks/events.less";
 @import "blocks/field.less";
 @import "blocks/form.less";
+@import "blocks/header.less";
+@import "blocks/listing.less";
+@import "blocks/page-footer.less";
+@import "blocks/page-header.less";
 @import "blocks/pp.less";
 @import "blocks/radio.less";
-@import "blocks/check.less";
-@import "blocks/section-title.less";
-@import "blocks/event-card.less";
-@import "blocks/listing.less";
 @import "blocks/reserve.less";
-@import "blocks/events.less";
-@import "blocks/event.less";
-@import "blocks/page-header.less";
-@import "blocks/page-footer.less";
+@import "blocks/section-title.less";
+@import "blocks/subscribe-form.less";
+@import "blocks/table.less";
+
+
+
+
+
+
+
+
