Added my project

--- a/src/styles/blocks/article.less
+++ b/src/styles/blocks/article.less
@@ -1,10 +1,6 @@
-.article {
-    &__container {
-        .container;
-    }
-
-    &__content {
-        max-width: 880px;
+.article{
+    &__container{
+        .container();
     }
 
     &__title {
