--- a/src/styles/blocks/about.less
+++ b/src/styles/blocks/about.less
@@ -1,36 +1,21 @@
 .about {
     &__container {
-        .container;
-
+        .container();
     }
 
-    &__header {
-        margin-bottom: 0px;
-        margin-top: 187px;
-    }
-
-    &__block1 {
+    &__block {
         display: grid;
         grid-template-columns: 1fr 400px;
         grid-template-areas:
-            "title title"
-            "text text";
+        "title1 title1"
+        "text1 text1"
+        "pic1 pic2"
+        "title pic2"
+        "text text";
         gap: 50px 60px;
-        margin-top: 100px;
     }
 
-    &__block2 {
-        display: grid;
-        grid-template-columns: 1fr 400px;
-        grid-template-areas:
-            "pic1 pic2"
-            "title pic2"
-            "text text";
-        gap: 50px 60px;
-        margin-top: 100px;
-    }
-
-    &__block2-picture1 {
+    &__picture {
         grid-area: pic1;
     }
 
@@ -40,105 +25,62 @@
         font-size: 44px;
     }
 
+    &__subtitle1 {
+        grid-area: title1;
+        margin: 50px 0 0;
+        font-size: 44px;
+    }
+
     &__text {
         grid-area: text;
         margin: 0;
         margin-left: auto;
         max-width: 870px;
+        margin-bottom: 60px;
     }
 
-    &__block2-picture2 {
+    &__text1 {
+        grid-area: text1;
+        margin: 0;
+        margin-bottom: 50px;
+        margin-left: auto;
+        max-width: 867px;
+    }
+
+    &__picture2 {
         grid-area: pic2;
         align-self: flex-end;
     }
 
-    &__block3 {
-        display: grid;
-        grid-template-columns: 1fr 400px;
-        grid-template-rows: 68px 75px 60px;
-        grid-template-areas:
-            "pic3 text"
-            "pic3 text"
-            "pic3 link";
-        gap: 80px 60px;
-        margin-top: 100px;
-    }
-
-    &__block3-content {
-        height: 100%;
-    }
-
-    &__block3-picture {
+    &__block2-picture {
         box-sizing: border-box;
-        grid-area: pic3;
-        position: relative;
-        padding: 18px 19px 0 49px;
         display: block;
         max-width: 930px;
         width: 100%;
-
+        position: relative;
+        padding: 18px 19px 0 49px;
         &::before {
-            position: absolute;
             content: '';
+            position: absolute;
             top: 0;
-            left: 0;
             right: 0;
+            left: 0;
             height: 64.7%;
             background-color: @red;
         }
-
         &::after {
+            content: '';
             display: block;
             width: 100%;
-            content: '';
             padding-top: 40.86%;
         }
     }
 
-    &__block3-img {
+    &__block2-img {
         position: absolute;
         top: 19px;
         left: 49px;
         width: calc(100% - 57px);
         object-fit: contain;
-
-    }
-
-    &__block3-link {
-
-        grid-area: link;
-        height: 60px;
-        align-self: flex-end;
-        display: flex;
-        text-decoration: none;
-        transition: currentColor 0.2s, color 0.2s;
-
-        &:hover,
-        &:active {
-            //currentColor: @red;
-            color: @red;
-        }
-    }
-
-    &__block3-text {
-        grid-area: text;
-        align-self: flex-end;
-        font-weight: 400px;
-        font-size: 18px;
-        margin: 0;
-        max-width: 345px;
-        margin-bottom: 0px;
-    }
-
-    &__block3-link-text {
-        align-self: center;
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 18px;
-    }
-
-    &__block3-link-arrow {
-        margin-right: 0px;
-        margin-left: auto;
     }
 }
