--- a/src/styles/blocks/event-card.less
+++ b/src/styles/blocks/event-card.less
@@ -3,38 +3,34 @@
     width: 405px;
     max-width: 100%;
     min-width: 280px;
-
+    
     &__link {
-        display: flex;
-        flex-direction: column;
-        text-decoration: none;
-        width: 100%;
-        color: @black;
-
-        &:hover .event-card__title {
-            color: @red;
-            text-decoration-color: @red;
-        }
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    color: @black;
+    text-decoration: none;
     }
 
     &__picture {
         display: block;
+        position: relative;
         width: 100%;
         margin: 0 0 25px;
-        overflow: hidden;
-        font-size: 0px;
+        font-size: 0;
         text-decoration: none;
-        position: relative;
+        overflow: hidden;
+    }
 
-        &::after {
-            content: "";
-            display: block;
-            width: 100%;
-            padding-top: 107.16%;
-        }
+    &__picture::after {
+        content: "";
+        display: block;
+        width: 100%;
+        padding-top: 107.16%;
     }
 
     &__img {
+        display: block;
         position: absolute;
         top: 0;
         left: 0;
@@ -46,29 +42,39 @@
     &__title {
         margin: 0 0 15px;
         min-height: 66px;
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 1.3;
         color: @black;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 33px;
         text-decoration: underline transparent;
-        transition: color 0.2s, text-decoration 0.2s;
+        transition: color 0.2s, text-decoration-color 0.2s;
 
         @media @bw1660 {
             margin: 0 0 10px;
         }
-
-        @media @bw1020 {
-            min-height: 21px;
+        
+        @media @bw1340 {
+            min-height: 54px;
+            font-size: 20px;
+            line-height: 27px;
+        }
+        
+        @media @bw768 {
+            min-height: 44px;
             font-size: 16px;
-            line-height: 21px;
+            line-height: 22px;
         }
     }
 
-    &__text {
+    &__title:hover{
+        color: @red;
+        text-decoration-color: @red;
+    }
+
+    &__description {
         margin: 0 0 auto;
-        font-weight: 400;
         font-size: 16px;
-        line-height: 1.3;
+        line-height: 22px;
 
         @media @bw1020 {
             font-size: 14px;
@@ -77,8 +83,9 @@
     }
 
     &__time {
-        font-size: 15px;
-        display: block;
+        margin: 15px 0 0;
         font-weight: 300;
+        font-size: 14px;
+        line-height: 19px;
     }
 }
