--- a/src/styles/blocks/field.less
+++ b/src/styles/blocks/field.less
@@ -1,20 +1,39 @@
 .field {
     display: flex;
     flex-direction: column;
-
-    &__input,
-    &__textarea {
-        box-sizing: border-box;
+    
+    &__title {
         display: block;
-        width: 100%;
-        border: none;
-        border-radius: 5px;
-        background-color: @white;
+        margin: 0 0 10px;
+        color: @black;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
+    }
+    
+    &__label {
+        display: block;
+        margin-bottom: 5px;
         font-size: 16px;
-        line-height: 1.375;
+        line-height: 1.3;
+        color: @black;
+    }
+                
+    &__input,
+    &__textarea,
+    &__select {
+      box-sizing: border-box;
+      display: block;
+      width: 100%;
+      border: none;
+      border-radius: 5px;
+      background-color: @white;
+      font-size: 16px;
+      line-height: 1.375;
     }
 
-    &__input {
+    &__input,
+    &__select {
         height: 55px;
         padding: 0 20px;
     }
@@ -24,57 +43,30 @@
         padding: 20px;
     }
 
-    &__title {
-        display: block;
-        margin: 0 0 10px;
-        color: @black;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 25px;
-    }
-
-    &__label {
-        display: block;
-        margin-bottom: 5px;
-        font-size: 16px;
-        line-height: 1.3;
-        color: @black;
-    }
-
-    &__select {
-        box-sizing: border-box;
-        display: block;
+    &__date-inputs {
+        display: flex;
         width: 100%;
+        max-width: 251px;
         height: 55px;
-        padding: 0 20px;
-        border: none;
-        border-radius: 5px;
-        background-color: @white;
-        font-size: 16px;
-        line-height: 1.375;
     }
 
     &__date-input {
-        width: 55px;
         box-sizing: border-box;
         display: block;
+        width: 55px;
+        height: 55px;
+        margin-right: 15px;
         border: none;
-        text-align: center;
         border-radius: 5px;
         background-color: @white;
+        padding: 0 5px;
         font-size: 16px;
         line-height: 1.375;
-        height: 55px;
-        padding: 17px 13px 16px;
-
-        &--w110 {
-            width: 110px;
+        text-align: center;
+    
+        &--year {
+          flex-grow: 1;
+          margin-right: 0;
         }
-    }
-
-    &__date-inputs {
-        display: flex;
-        gap: 15px;
-
     }
 }
