--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -1,68 +1,75 @@
 .form {
-    &__list {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px 60px;
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  &__field,
+  &__group {
+    width: 100%;
+    &--w50 {
+      width: calc(50% - 30px);
     }
+  }
 
-    &__field {
-        width: 100%;
+  &__field {
+    margin: 0 0 30px;
+  }
 
-        &--w50 {
-            width: calc(50% - 30px);
-        }
+  &__check-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 0 30px;
+  }
 
-        &--mb30 {
-            margin-bottom: 30px;
-        }
+  &__check {
+    margin-bottom: 10px;
+    &:last-child {
+      margin-bottom: 0;
     }
+  }
 
-    &__group {
-        width: 100%;
+  &__section {
+    margin: 0 0 20px;
+  }
 
-        &--w50 {
-            width: calc(50% - 30px);
-        }
+  &__section-title {
+    margin: 0 0 10px;
+    color: @black;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 25px;
+  }
+
+  &__btns {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+
+  }
+
+  &__submit {
+    &--w50 {
+      width: calc(50% - 30px);
     }
+  }
 
-    &__section {
-        margin-bottom: 50px;
+  &__close-btn {
+    margin: 0 auto;
+    padding: 4px 0;
+    border: none;
+    background: transparent;
+    color: @black;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    text-decoration: underline;
+    transition: color 0.2s;
+
+    &:hover {
+      color: @red;
     }
-
-    &__title {
-        display: block;
-        margin: 0 0 10px;
-        color: @black;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 25px;
-    }
-
-    &__btns {
-        display: flex;
-        align-items: center;
-        margin-top: 40px;
-    }
-
-    &__btn {
-        max-width: 400px;
-        width: 100%;
-    }
-
-    &__btn-close {
-        margin: 0 auto;
-        padding: 4px 0;
-        border: none;
-        background: transparent;
-        color: @black;
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 22px;
-        text-decoration: underline;
-        transition: color 0.2s;
-
-        &:hover {
-            color: @red;
-        }
-    }
+  }
 }
