--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -1,51 +1,77 @@
-.listing {
-    .container;
+.listing{
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 1414px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-right: 40px;
 
-    &__article-list {
+    &__events-list{
         display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    &__events-list {
-        display: flex;
-        gap: 60px;
         flex-wrap: wrap;
+        margin: 0 -30px -120px;
 
         @media @bw1660 {
-            gap: 40px;
+            margin: 0 -20px -100px;
         }
-
+        
+        @media @bw1340 {
+            margin: 0 -15px -100px;
+        }
+        
         @media @bw1020 {
-            gap: 30px;
+            justify-content: center;
+            margin: 0 -15px -80px;
+        }
+        
+        @media @bw768 {
+            margin: 0 -10px -80px;
+        }
+        
+        @media @bw650 {
+            margin: 0 0 -60px;
         }
     }
 
     &__event-card {
-        width: calc(33.333% - 40px);
-        margin: 0 0 60px;
+        width: calc(33.3333% - 60px);
+        margin: 0 30px 120px;
 
         @media @bw1660 {
-            width: calc(33.3333% - 26.666px);
+            width: calc(33.3333% - 40px);
+            margin: 0 20px 100px;
         }
 
+        @media @bw1340 {
+            width: calc(33.3333% - 30px);
+            margin: 0 15px 100px;
+        }
+        
         @media @bw1020 {
-            width: calc(50% - 25px);
+            width: calc(50% - 30px);
+            max-width: 405px;
+            margin: 0 15px 80px;
         }
-
+        
+        @media @bw768 {
+            margin: 0 10px 80px;
+        }
+        
         @media @bw650 {
             width: 100%;
+            margin: 0 0 60px;
         }
     }
 
-    &__link {
-        margin-top: 85px;
-        margin-left: auto;
-    }
-
-    &__more-btn {
-        margin: 70px auto 0;
+    &__link{
+        font-family: @font1;
+        font-weight: 600;
+        align-self: flex-end;
+        color: @black;
+        width: 109px;
+        height: 16px;
+        text-decoration: none; 
     }
 }
