--- a/src/styles/blocks/page-header.less
+++ b/src/styles/blocks/page-header.less
@@ -1,4 +1,4 @@
-.page-header {
+.page-header{
     position: fixed;
     top: 0;
     left: 0;
@@ -6,8 +6,7 @@
     height: 147px;
     display: flex;
     align-items: center;
-    background-color: rgba(222, 222, 222, 0.5);
-
+    background-color:rgba(222, 222, 222, 0.5);
     backdrop-filter: blur(20px);
     z-index: 100;
 
@@ -19,179 +18,258 @@
         height: 70px;
     }
 
-    &__container {
+    &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: fade(@gray, 98%);
+    
+        @supports (backdrop-filter: blur(20px)) {
+          background-color: fade(@gray, 70%);
+          backdrop-filter: blur(20px);
+        }
+    
+      &__container {
         .container;
+        position: relative;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        z-index: 1;
+      }
     }
 
-    &__logo {
+    &__logo{
+        position: relative;
         flex-shrink: 0;
         width: 202px;
         height: 147px;
         font-size: 0;
         text-decoration: none;
+        z-index: 1;
+
+        @media @bw1660 {
+            width: 152px;
+            height: 111px;
+        }
 
         @media @bw768 {
             width: 96px;
             height: 70px;
         }
-
-        @media @bw400 {
-            margin-left: -20px;
-        }
     }
 
-    &__logo-icon {
+    &__logo-icon{
         width: 100%;
         height: 100%;
     }
 
-    &__nav {
+    &__container{
+        .container();
+        
+        display: flex;
+        align-items: center;
+    }
+
+    &__nav{
+        box-sizing: border-box;
         display: flex;
         align-items: baseline;
         margin: 0 auto;
-        gap: 50px;
 
         @media @bw1020 {
             position: absolute;
-            flex-direction: column;
-            top: 0;
             left: 0;
+            top: 0;
             width: 100%;
             height: 100vh;
-            margin: 0;
-            background-color: rgba(222, 222, 222, 0.5);
-            transform: translateX(-100%);
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 211px 30px 30px;
+            background-color: fade(@gray, 98%);
             transition: transform 0.4s;
+            transform: translateX(-100%);
+            overflow-x: hidden;
+            overflow-y: auto;
+
+            @supports (backdrop-filter: blur(20px)) {
+                background-color: fade(@gray, 70%);
+                backdrop-filter: blur(20px);
+            }
+        }
+
+        @media @bw768 {
+            padding: 150px 20px 30px;
         }
     }
 
-    &__nav-link,
-    &__nav-user-link,
-    &__nav-logout {
+    &__nav-link{
         margin: 0 25px;
         color: @black;
         font-weight: 600;
         font-size: 18px;
-        line-height: 1.4;
+        line-height: 25px;
         text-decoration: none;
-        transition: color 0.2s;
+        transition: color 0.2s; /*плавная смена цвета */
 
-        &:hover,
-        &:active {
-            color: @red;
+        @media @bw1020 {
+            margin: 0 0 40px;
+            font-size: 16px;
+            line-height: 22px;
+        }
+    }
+    
+    &__nav-user {
+        display: none;
+                    
+        @media @bw1020 {
+          display: flex;
+          align-items: center;
+          margin-top: 20px;
+        }
+    }
+    &__nav-user-link {
+        color: @black;
+        text-decoration: none;
+        margin-right: 25px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 22px;
+        &:hover{
+            color: @red_dark;
+        }
+    }
+    
+    &__nav-logout {
+        width: 24px;
+        height: 24px;
+        font-size: 0;
+    }
+
+    &__right-block{
+        position: relative;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        width: 202px;
+        z-index: 1;
+
+        @media @bw1660 {
+            width: 152px;
         }
 
         @media @bw1020 {
-            box-sizing: border-box;
-            margin: 0;
-            font-size: 16px;
-            padding: 5px 0;
+            width: auto;
+            margin-left: auto;
         }
     }
 
-    &__nav-user-link {
-        display: none;
-        margin-top: 60px;
-        font-weight: 400;
+    &__nav-link:active{
+        color: @red;
+    }
+
+    &__nav-link:hover{
+        color: @red;
+    }
+
+    &__user-btn{
+        max-width: 100%;
+        display: inline-block;
+        box-sizing: border-box;
+        padding: 15px 40px;
+        border: 1px solid @black;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        outline: none;
+        color: @black;
+        font-family: @font1;
+        font-weight: 600;
         font-size: 16px;
+        line-height: 20px;
+        text-align: center;
+        text-decoration: none;
+        transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+        overflow: hidden;
+        cursor: pointer;
 
         @media @bw1020 {
             display: flex;
-        }
-    }
-
-    &__nav-user-icon {
-        display: none;
-
-        @media @bw1020 {
-            display: block;
-        }
-    }
-
-    &__right-block {
-        display: flex;
-        justify-content: flex-end;
-        align-items: content;
-        width: 202px;
-
-        @media @bw1660 {
-            width: 111px;
-        }
-
-        @media @bw1020 {
-            margin-left: auto;
-            width: auto;
-            gap: 30px;
-        }
-    }
-
-    &__user-btn {
-        @media @bw1020 {
-            border: none;
-            font-size: 0px;
             width: 40px;
             height: 40px;
             padding: 0;
+            border: none;
+            background: none;
+            color: @black;
+            font-size: 0;
+          }
+          &:hover {
+            background-color: @black;
+            color: @white;
+            
+            @media @bw1020 {
+              background: none;
+              color: @red;
+            }
         }
+    }
 
-        &.btn {
-            margin-right: -8px;
-        }
+    &__user-btn:hover{
+        background-color: @black;
+        color: @white;
+
     }
 
     &__user-icon {
         display: none;
-
+        
         @media @bw1020 {
-            display: block;
+          display: block;
+          margin: auto;
         }
     }
 
     &__nav-toggle {
         display: none;
-
+                
         @media @bw1020 {
-            display: block;
-            position: relative;
-            border: none;
-            background-color: transparent;
-            outline: none;
-            border: 0;
-            width: 40px;
-            height: 40px;
+          display: block;
+          position: relative;
+          right: -11px;
+          margin-left: 18px;
+          width: 40px;
+          height: 40px;
+          border: none;
+          background: none;
+          cursor: pointer;
         }
 
+        @media @bw768 {
+            margin-left: 5px;
+        }
+        
         &::before,
         &::after {
-            content: '';
-            position: absolute;
-            left: 10px;
-            height: 2px;
-            width: 20px;
-            border-radius: 2px;
-            background-color: @black;
+          content: "";
+          display: block;
+          position: absolute;
+          top: 19px;
+          left: 11px;
+          width: 18px;
+          height: 2px;
+          border-radius: 2px;
+          background-color: @black;
+          transform-origin: 50% 50%;
         }
-
         &::before {
-            top: 13px;
+          top: 13px;
+          box-shadow: 0 6px 0 @black;
         }
-
         &::after {
-            bottom: 13px;
+          top: 25px;
         }
-    }
-
-    &__nav-toggle-line {
-        position: absolute;
-        margin-top: -1px;
-        top: 50%;
-        left: 10px;
-        height: 2px;
-        width: 20px;
-        border-radius: 2px;
-        background-color: @black;
     }
 }
