--- a/src/styles/blocks/radio.less
+++ b/src/styles/blocks/radio.less
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 15px;
-
+    
     &__item {
         box-sizing: border-box;
         position: relative;
@@ -15,7 +14,7 @@
         padding-left: 23px;
         color: @black;
         cursor: pointer;
-
+        
         &:last-child {
             margin-bottom: 0;
         }
@@ -25,13 +24,13 @@
         .is-hidden();
 
         &:checked {
-            &~.radio__marker {
-                background-color: @black;
+            &~.radio__mark {
+              background-color: @black;
             }
         }
     }
 
-    &__marker {
+    &__mark {
         box-sizing: border-box;
         display: block;
         position: absolute;
