--- a/src/styles/blocks/reserve.less
+++ b/src/styles/blocks/reserve.less
@@ -1,45 +1,48 @@
 .reserve {
-    .container;
-    margin-top: 80px;
     display: grid;
-    grid-template-columns: 405px 1fr;
     gap: 65px 11%;
+    grid-template-columns: 405px calc(89% - 405px);
+    grid-template-areas: 
+      "checks scheme"
+      "order legend"; 
     width: 100%;
-    grid-template-areas:
-        "checkbox scheme"
-        "order legend";
 
-    &__check {
-        grid-area: "check";
-    }
+    @media @bw1340 {
+      gap: 65px 6.5%;
+      grid-template-columns: 340px calc(93.5% - 340px);
+  }
 
-    &__check-list {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
+  @media @bw1020 {
+    gap: 60px;
+    grid-template-columns: auto 390px;
+    grid-template-areas: 
+      "scheme scheme"
+      "checks legend"
+      "checks order"; 
+}
 
-    &__check-label {
-        font-size: 16px;
-        font-weight: 400;
+@media @bw768 {
+  grid-template-columns: 100%;
+  grid-template-areas: 
+    "scheme"
+    "legend"
+    "checks"
+    "order"; 
+}
+  
+  &__checks {
+    grid-area: checks;
     }
-
-    &__scheme {
-        display: flex;
-        flex-direction: column;
-        grid-area: "scheme";
-    }
-
-    &__header {
-        align-self: center;
-        margin-bottom: 40px;
-    }
-
-    &__order {
-        grid-area: "order";
-    }
-
-    &__legend {
-        grid-area: "legend";
-    }
+  
+  &__order {
+    grid-area: order;
+  }
+  
+  &__scheme {
+    grid-area: scheme;
+  }
+  
+  &__scheme {
+    grid-area: scheme;
+  }
 }
