--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -1,4 +1,4 @@
-// Цветовая палитра
+// Цветовая палитра 
 @white: #ffffff;
 @black: #1f1e1e;
 @red: #bc3324;
@@ -13,19 +13,20 @@
 @font3: "mak", serif;
 
 //Размеры экрана
-@bw400: ~"(max-width: 399px)";
-@w400: ~"(min-width: 400px)";
 @bw600: ~"(max-width: 599px)";
 @w600: ~"(min-width: 600px)";
+
 @bw650: ~"(max-width: 649px)";
 @w650: ~"(min-width: 650px)";
+
 @bw768: ~"(max-width: 767px)";
 @w768: ~"(min-width: 768px)";
+
 @bw1020: ~"(max-width: 1019px)";
 @w1020: ~"(min-width: 1020px)";
+
 @bw1340: ~"(max-width: 1339px)";
-@w1340: ~"(min-width: 1340px)";
+@w1340: ~"(max-width: 1340px)";
+
 @bw1660: ~"(max-width: 1659px)";
 @w1660: ~"(min-width: 1660px)";
-@bw1170: ~"(max-width: 1169px)";
-@w1170: ~"(min-width: 1170px)";
